--- a/Code.ipynb
+++ b/Code.ipynb
@@ -1,69 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KNeighborsClassifier\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msvm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SVC\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ładujemy dane"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.datasets import load_iris, load_breast_cancer, load_wine\n",
+    "from sklearn import metrics\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_iris, load_breast_cancer, load_wine\n\u001b[0;32m      2\u001b[0m iris \u001b[38;5;241m=\u001b[39m load_iris()\n\u001b[0;32m      3\u001b[0m cancer \u001b[38;5;241m=\u001b[39m load_breast_cancer()\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.datasets import load_iris, load_breast_cancer, load_wine\n",
     "iris = load_iris()\n",
     "cancer = load_breast_cancer()\n",
-    "wine = load_wine()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "lista algorytmow:"
+    "wine = load_wine()"
    ]
   },
   {
@@ -72,14 +33,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "algorytmy = [KNeighborsClassifier(),SVC()]"
+    "algorithms = [KNeighborsClassifier(),SVC()]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Średnie metryk walidacji krzyżowej"
+    "Averages of cross-validation metrics"
    ]
   },
   {
@@ -112,18 +73,18 @@
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "import numpy as np\n",
-    "for algorytm in algorytmy:\n",
-    "    print(algorytm)\n",
-    "    print(np.average(cross_val_score(algorytm, iris.data, iris.target,cv=5)),\"Dokładność Iris\")\n",
-    "    print(np.average(cross_val_score(algorytm, cancer.data, cancer.target,cv=5, scoring='recall')),\"Czułość Cancer\")\n",
-    "    print(np.average(cross_val_score(algorytm, wine.data, wine.target,cv=5, scoring='f1_micro')),\"F-miara Wine\")"
+    "for algorithm in algorithms:\n",
+    "    print(algorithm)\n",
+    "    print(np.average(cross_val_score(algorithm, iris.data, iris.target,cv=5)),\"Dokładność Iris\")\n",
+    "    print(np.average(cross_val_score(algorithm, cancer.data, cancer.target,cv=5, scoring='recall')),\"Czułość Cancer\")\n",
+    "    print(np.average(cross_val_score(algorithm, wine.data, wine.target,cv=5, scoring='f1_micro')),\"F-miara Wine\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kod przykładowego użycia"
+    "Example usage code"
    ]
   },
   {
@@ -140,21 +101,7 @@
     }
    ],
    "source": [
-    "# Załadowanie funkcji walidacji krzyżowej\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "# Załadowanie biblioteki do obliczeń\n",
-    "import numpy as np\n",
-    "# Załadowanie bazy danych wbudowanej w Scikit-learn\n",
-    "from sklearn.datasets import load_breast_cancer\n",
-    "# Załadowanie algorytmu KNN\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "cancer = load_breast_cancer()\n",
-    "knn = KNeighborsClassifier()\n",
-    "\n",
-    "# Wyświetlenie uśrednionej wartości 5'krotnej walidacji \n",
-    "# krzyżowej liczącej czułość na podstawie użycia\n",
-    "# algorytmu KNN na bazie danych \"cancer\"\n",
     "print('Czułość =', np.average(cross_val_score(knn, \n",
     "cancer.data, cancer.target,cv=5, scoring='recall')))"
    ]
@@ -164,17 +111,6 @@
    "metadata": {},
    "source": [
     "Hyper parameter tuning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn import metrics\n",
-    "import pandas as pd"
    ]
   },
   {
@@ -3991,7 +3927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import danych"
+    "data export"
    ]
   },
   {
@@ -4041,7 +3977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
