--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,34 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.svm import SVC\n",
+    "\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.datasets import load_iris, load_breast_cancer, load_wine\n",
+    "\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "\n",
     "from sklearn import metrics\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris = load_iris()\n",
-    "cancer = load_breast_cancer()\n",
-    "wine = load_wine()"
+    "cancer = load_breast_cancer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +42,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Averages of cross-validation metrics"
+    "Average values of metrics after 5-fold cross-validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -54,56 +56,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=5, p=2,\n",
-      "           weights='uniform')\n",
-      "0.9733333333333334 Dokładność Iris\n",
-      "0.9607198748043817 Czułość Cancer\n",
-      "0.6860213995508112 F-miara Wine\n",
-      "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-      "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
-      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-      "  tol=0.001, verbose=False)\n",
-      "0.9800000000000001 Dokładność Iris\n",
-      "1.0 Czułość Cancer\n",
-      "0.42772983067100717 F-miara Wine\n"
+      "KNeighborsClassifier()\n",
+      "0.9279459711224964 Accuracy\n",
+      "0.9607589984350549 Recall\n",
+      "SVC()\n",
+      "0.9121720229777983 Accuracy\n",
+      "0.9803599374021911 Recall\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
-    "import numpy as np\n",
     "for algorithm in algorithms:\n",
     "    print(algorithm)\n",
-    "    print(np.average(cross_val_score(algorithm, iris.data, iris.target,cv=5)),\"Dokładność Iris\")\n",
-    "    print(np.average(cross_val_score(algorithm, cancer.data, cancer.target,cv=5, scoring='recall')),\"Czułość Cancer\")\n",
-    "    print(np.average(cross_val_score(algorithm, wine.data, wine.target,cv=5, scoring='f1_micro')),\"F-miara Wine\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Example usage code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Czułość = 0.9607198748043817\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "print('Czułość =', np.average(cross_val_score(knn, \n",
-    "cancer.data, cancer.target,cv=5, scoring='recall')))"
+    "    print(np.average(cross_val_score(algorithm, cancer.data, cancer.target,cv=5)),\"Accuracy\")\n",
+    "    print(np.average(cross_val_score(algorithm, cancer.data, cancer.target,cv=5, scoring='recall')),\"Recall\")"
    ]
   },
   {
