--- a/Code.ipynb
+++ b/Code.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,25 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\cezar\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\_scorer.py:610: FutureWarning: The `needs_threshold` and `needs_proba` parameter are deprecated in version 1.4 and will be removed in 1.6. You can either let `response_method` be `None` or set it to `predict` to preserve the same behaviour.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scoring = {\n",
     "    'accuracy': make_scorer(accuracy_score),\n",
     "    'recall': make_scorer(recall_score),\n",
     "    'precision': make_scorer(precision_score),\n",
     "    'f1': make_scorer(f1_score),\n",
-    "    'roc_auc': make_scorer(roc_auc_score, needs_proba=True)\n",
+    "    'roc_auc': make_scorer(roc_auc_score)\n",
     "}"
    ]
   },
