Completed Regression_CPU

--- a/Regression_CPU.ipynb
+++ b/Regression_CPU.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#1.\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.colors as mcolors\n",
@@ -34,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Data split\n",
+    "#2. Data split\n",
     "diabetes = load_diabetes()\n",
     "X = diabetes.data\n",
     "y = diabetes.target\n",
@@ -48,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Data standardization\n",
+    "#3. Data standardization\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)"
@@ -60,6 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#4.\n",
     "models = [\n",
     "    ('Ridge Regression', Ridge()),\n",
     "    ('Lasso Regression', Lasso()),\n",
@@ -80,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Cross-validation parameters\n",
+    "#5. Cross-validation parameters\n",
     "cv = KFold(n_splits=5, shuffle=True, random_state=345)"
    ]
   },
@@ -101,7 +103,7 @@
     }
    ],
    "source": [
-    "#Default hyperparameters\n",
+    "#6. Default hyperparameters\n",
     "default_results = []\n",
     "for name, model in models:\n",
     "    nmse_scores = cross_val_score(model, X_train, y_train, cv=cv, scoring='neg_mean_squared_error') #negative becouse cross_val_score is maximalizing\n",
@@ -124,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Defining hyperparameter grids for individual models\n",
+    "#7. Defining hyperparameter grids for individual models\n",
     "\n",
     "param_grids = {\n",
     "    'Ridge Regression': {\n",
@@ -227,6 +229,7 @@
     }
    ],
    "source": [
+    "#8. \n",
     "best_models = []\n",
     "for name, model in models:\n",
     "    print(f\"Tuning {name}...\")\n",
@@ -242,6 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#9. \n",
     "tuned_results = []\n",
     "for name, model, params in best_models:\n",
     "    mse_scores = cross_val_score(model, X_train, y_train, cv=cv, scoring='neg_mean_squared_error')\n",
@@ -321,6 +325,7 @@
     }
    ],
    "source": [
+    "#10. \n",
     "best_models_random = []\n",
     "for name, model in models:\n",
     "    print(f\"Randomized Tuning {name}...\")\n",
@@ -345,6 +350,7 @@
     }
    ],
    "source": [
+    "#11. \n",
     "randomized_results = []\n",
     "for name, model, params in best_models_random:\n",
     "    mse_scores = cross_val_score(model, X_train, y_train, cv=cv, scoring='neg_mean_squared_error')\n",
@@ -367,6 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#12.\n",
     "def styled_df(df):\n",
     "    styled_df = df.style.background_gradient(subset=['R2', 'Explained Variance'], cmap='RdYlGn')\n",
     "    styled_df = styled_df.background_gradient(subset=['MSE', 'MAE'], cmap='RdYlGn_r') #reverse color map for minimized metrics\n",
@@ -596,6 +603,7 @@
     }
    ],
    "source": [
+    "#13.\n",
     "default_results_df = pd.DataFrame(default_results)\n",
     "styled_df(default_results_df)"
    ]
@@ -835,6 +843,7 @@
     }
    ],
    "source": [
+    "#13.\n",
     "tuned_results_df = pd.DataFrame(tuned_results)\n",
     "styled_df(tuned_results_df)"
    ]
@@ -1078,6 +1087,7 @@
     }
    ],
    "source": [
+    "#13.\n",
     "randomized_results_df = pd.DataFrame(randomized_results)\n",
     "styled_df(randomized_results_df)"
    ]
