Completed Regression_CPU

--- a/Regression_CPU.ipynb
+++ b/Regression_CPU.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1.\n",
+    "#1. Importing necessary libraries.\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.colors as mcolors\n",
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2. Data split\n",
+    "#2. Loading and splitting the data.\n",
     "diabetes = load_diabetes()\n",
     "X = diabetes.data\n",
     "y = diabetes.target\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3. Data standardization\n",
+    "#3. Data standardization.\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)"
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#4.\n",
+    "#4. List of algorithms.\n",
     "models = [\n",
     "    ('Ridge Regression', Ridge()),\n",
     "    ('Lasso Regression', Lasso()),\n",
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#5. Cross-validation parameters\n",
+    "#5. Cross-validation parameters.\n",
     "cv = KFold(n_splits=5, shuffle=True, random_state=345)"
    ]
   },
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#6.\n",
+    "#6. Functions to generate model metrics.\n",
     "def evaluate_model(name, model, X_train, y_train, cv):\n",
     "    nmse_scores = cross_val_score(model, X_train, y_train, cv=cv, scoring='neg_mean_squared_error')\n",
     "    nmae_scores = cross_val_score(model, X_train, y_train, cv=cv, scoring='neg_mean_absolute_error')\n",
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#7. Default hyperparameters\n",
+    "#7. Generating metrics for default hyperparameters.\n",
     "default_results = evaluate_models(models, X_train, y_train, cv)\n",
     "df_default = pd.DataFrame(default_results)"
    ]
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#8. Defining hyperparameter grids for individual models\n",
+    "#8. Defining hyperparameter grids for each algorythm.\n",
     "\n",
     "param_grids = {\n",
     "    'Ridge Regression': {\n",
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "#9. \n",
+    "#9. Generating best hyperparameter sets based on specified metric using grid search.\n",
     "best_models = []\n",
     "for name, model in models:\n",
     "    print(f\"Tuning {name}...\")\n",
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#10. \n",
+    "#10. Generating additional metrics using the best hyperparameter sets.\n",
     "tuned_results = evaluate_models([(name, model) for name, model, params in best_models], X_train, y_train, cv)\n",
     "df_tuned = pd.DataFrame(tuned_results)"
    ]
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#13.\n",
+    "#11. Formatting tables.\n",
     "def styled_df(df):\n",
     "    styled_df = df.style.background_gradient(subset=['R2', 'Explained Variance'], cmap='RdYlGn')\n",
     "    styled_df = styled_df.background_gradient(subset=['MSE', 'MAE'], cmap='RdYlGn_r') #reverse color map for minimized metrics\n",
@@ -484,7 +484,7 @@
     }
    ],
    "source": [
-    "#14.1.\n",
+    "#12.1. Displaying the generated table.\n",
     "styled_df(df_default)"
    ]
   },
@@ -723,7 +723,7 @@
     }
    ],
    "source": [
-    "#14.2.\n",
+    "#12.2. Displaying the generated table.\n",
     "styled_df(df_tuned)"
    ]
   }
