Completed Regression_CPU

--- a/Regression_CPU.ipynb
+++ b/Regression_CPU.ipynb
@@ -484,7 +484,7 @@
     }
    ],
    "source": [
-    "#12.1. Displaying the generated table.\n",
+    "#12.1. Displaying the generated table for default hyperparameters..\n",
     "styled_df(df_default)"
    ]
   },
@@ -723,7 +723,7 @@
     }
    ],
    "source": [
-    "#12.2. Displaying the generated table.\n",
+    "#12.2. Displaying the generated table for tuned hyperparameters..\n",
     "styled_df(df_tuned)"
    ]
   }
